Adição de BlackList e Whitelist em Postgres funcional para BOT